tests/should_fail/sf004_missing_equals.hs
-- Should fail: function binding missing the '=' sign
module Sf004MissingEquals where

f :: Int -> Int
f x
